[package]
name = "toasty-sql"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
publish = false

[dependencies]
toasty-core.workspace = true

[lints]
workspace = true
