[package]
name = "toasty-sql"
version = "0.4.0"
description = "SQL serialization layer for Toasty database drivers"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-sql"

[dependencies]
toasty-core.workspace = true

[lints]
workspace = true
