[package]
name = "toasty-sql"
version = "0.6.1"
description = "SQL serialization layer for Toasty database drivers"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-sql"

[dependencies]
toasty-core.workspace = true
jiff = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
serde_json.workspace = true

[features]
rust_decimal = ["dep:rust_decimal", "toasty-core/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff"]

[lints]
workspace = true
