[package]
name = "toasty"
version = "0.1.0"
edition = "2021"

[features]
default = ["jiff"]
dynamodb = ["dep:toasty-driver-dynamodb"]
mysql = ["dep:toasty-driver-mysql"]
postgresql = ["dep:toasty-driver-postgresql"]
sqlite = ["dep:toasty-driver-sqlite"]
jiff = ["dep:jiff", "toasty-core/jiff"]
serde = ["dep:serde_core"]


[dependencies]
toasty-macros.workspace = true
toasty-core.workspace = true

# Built-in database drivers
toasty-driver-dynamodb = { workspace = true, optional = true }
toasty-driver-mysql = { workspace = true, optional = true }
toasty-driver-postgresql = { workspace = true, optional = true }
toasty-driver-sqlite = { workspace = true, optional = true }
serde_core = { version = "1.0.221", optional = true }

by_address.workspace = true
anyhow.workspace = true
async-stream.workspace = true
jiff = { workspace = true, optional = true }
tokio-stream.workspace = true
uuid.workspace = true
indexmap.workspace = true
index_vec.workspace = true
tokio.workspace = true
url.workspace = true
