[package]
name = "example-cms-article-fields"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[features]
default = [ "sqlite" ]
mysql = [ "toasty/mysql" ]
postgresql = [ "toasty/postgresql" ]
sqlite = [ "toasty/sqlite" ]

[dependencies]
toasty = { workspace = true, features = [ "jiff", "serde" ] }
tokio.workspace = true
uuid.workspace = true
serde.workspace = true
jiff.workspace = true

[lints]
workspace = true
