[package]
name = "example-composite-key"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = [ "sqlite" ]
dynamodb = [ "toasty/dynamodb" ]
postgresql = [ "toasty/postgresql" ]
sqlite = [ "toasty/sqlite" ]

[dependencies]
toasty.workspace = true
tokio.workspace = true
uuid.workspace = true
