[package]
name = "example-hello-toasty"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[features]
default = [ "sqlite" ]
dynamodb = [ "toasty/dynamodb", "dep:toasty-driver-dynamodb", "dep:aws-config", "dep:aws-sdk-dynamodb" ]
mysql = [ "toasty/mysql" ]
postgresql = [ "toasty/postgresql" ]
sqlite = [ "toasty/sqlite" ]

[dependencies]
toasty.workspace = true
tokio.workspace = true
uuid.workspace = true

# For direct DynamoDB driver construction
toasty-driver-dynamodb = { path = "../../crates/toasty-driver-dynamodb", optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[lints]
workspace = true
