[package]
name = "example-service-ops"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false
default-run = "server"

[features]
default = [ "sqlite" ]
mysql = [ "toasty/mysql" ]
postgresql = [ "toasty/postgresql" ]
sqlite = [ "toasty/sqlite" ]

[dependencies]
toasty.workspace = true
toasty-cli.workspace = true
tokio.workspace = true
uuid.workspace = true
anyhow = "1"
tracing-subscriber.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[lints]
workspace = true
