[package]
name = "example-todo-with-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[features]
default = [ "sqlite" ]
dynamodb = [ "toasty/dynamodb" ]
mysql = [ "toasty/mysql" ]
postgresql = [ "toasty/postgresql" ]
sqlite = [ "toasty/sqlite" ]

[dependencies]
toasty.workspace = true
tokio.workspace = true
anyhow = "1.0.102"
uuid.workspace = true

[[bin]]
name = "todo-app"
path = "src/bin/app.rs"

[lints]
workspace = true
