[package]
name = "example-user-has-one-profile"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["sqlite"]
dynamodb = ["toasty/dynamodb"]
mysql = ["toasty/mysql"]
postgresql = ["toasty/postgresql"]
sqlite = ["toasty/sqlite"]

[dependencies]
toasty.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
